# fltk-scintilla

./: Cargo.toml  README.md  build.rs  scint.patch
.github/workflows/: rust.yml
Fl_Scintilla/: editor.vcxproj.filters  editor_dll.vcxproj  editor_dll.vcxproj.filters  test_editor.cxx
Fl_Scintilla/fltk/: Fl_Scintilla.cxx  Fl_Scintilla.h  PlatFLTK.cxx  PlatFLTK.h
Fl_Scintilla/include/: iconv.h
Fl_Scintilla/src/: CallTip.h
examples/: ex1.rs
fltk-scintilla-sys/: Cargo.toml  build.rs
fltk-scintilla-sys/Fl_Scintilla/: .gitignore  editor.sln  editor.vcxproj
fltk-scintilla-sys/Fl_Scintilla/fltk/: FL_Scintilla.vcxproj  Fl_Scintilla.cxx  Fl_Scintilla.vcxproj.filters  PlatFLTK.cxx
fltk-scintilla-sys/Fl_Scintilla/include/: Platform.h
fltk-scintilla-sys/Fl_Scintilla/src/: ExternalLexer.h
fltk-scintilla-sys/iconv/: iconv.h
fltk-scintilla-sys/src/: cfl_scintilla.h  lib.rs
src/: cfl_scintilla.cpp  lib.rs  sys.rs
